site/content/docs/5.0/customize/options.md
---
layout: docs
title: Параметры
description: Быстро настройте Bootstrap с помощью встроенных переменных, чтобы легко переключать глобальные настройки CSS для управления стилем и поведением.
group: customize
---

Настройте Bootstrap с помощью нашего встроенного файла пользовательских переменных и легко переключайте глобальные настройки CSS с помощью новых переменных Sass `$enable-*`. Замените значение переменной и при необходимости перекомпилируйте с помощью `npm run test`.

Вы можете найти и настроить эти переменные для ключевых глобальных параметров в файле Bootstrap `scss/_variables.scss`.

{{< bs-table "table text-start" >}}
| Переменная                     | Значения                                      | Описание                                                                               |
| ------------------------------ | --------------------------------------------- | -------------------------------------------------------------------------------------- |
| `$spacer`                      | `1rem` (по умолчанию), или любое значение > 0 | Задает значение разделителя по умолчанию для программного создания наших [утилиты интервала]({{< docsref "/utilities/spacing" >}}). |
| `$enable-rounded`              | `true` (по умолчанию) или `false`             | Включает предопределенные `border-radius` стили для различных компонентов. |
| `$enable-shadows`              | `true` или `false` (по умолчанию)             | Включает предопределенные `box-shadow` стили для различных компонентов. |
| `$enable-gradients`            | `true` или `false` (по умолчанию)             | Включает предопределенные градиенты с помощью `background-image` стилей на различных компонентов. |
| `$enable-transitions`          | `true` (по умолчанию) или `false`             | Включает предопределенные `transition` на различных компонентах. |
| `$enable-reduced-motion`       | `true` (по умолчанию) или `false`             | Включает [медиа выражение `prefers-reduced-motion`]({{< docsref "/getting-started/accessibility#reduced-motion" >}}), который подавляет определенные анимации/переходы на основе настроек браузера/операционной системы пользователя. |
| `$enable-grid-classes`         | `true` (по умолчанию) или `false`             | Позволяет генерировать классы CSS для системы сеток (например `.row`, `.col-md-1` и т. д.). |
| `$enable-caret`                | `true` (по умолчанию) или `false`             | Включает каретку псевдоэлемента `.dropdown-toggle`. |
| `$enable-button-pointers`      | `true` (по умолчанию) или `false`             | Добавить курсор "в виде руки" к неотключенным кнопочным элементам. |
| `$enable-rfs`                  | `true` (по умолчанию) или `false`             | Глобально включает [RFS]({{< docsref "/getting-started/rfs" >}}). |
| `$enable-validation-icons`     | `true` (по умолчанию) или `false`             | Включает иконки `background-image` в текстовых входах и некоторые настраиваемые формы для состояний проверки. |
| `$enable-negative-margins`     | `true` или `false` (по умолчанию)             | Позволяет генерировать [отрицательные утилиты margin]({{< docsref "/utilities/spacing#negative-margin" >}}). |
| `$enable-deprecation-messages` | `true` или `false` (по умолчанию)             | Устанавливает значение `true`, чтобы показывать предупреждения при использовании любых устаревших примесей и функций, которые планируется удалить в `v5`. |
| `$enable-important-utilities`  | `true` (по умолчанию) или `false`             | Включает `!important` суффикс в служебных классах. |
{{< /bs-table >}}
